--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -1,9 +1,3 @@
-button {
-}
-
-.button {
-}
-
 .button-primary {
   background-color: var(--secondary-bg-color);
   border-radius: 25px;
@@ -15,7 +9,7 @@ button {
   color: var(--bg-color);
   font-size: 25px;
   font-weight: bold;
+  cursor: pointer;
+  z-index: 2;
 }
 
-.button-secondary {
-}
