--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -8,7 +8,8 @@
 	padding-left: 16px;
 	padding-right: 16px;
 	border-bottom: 1px solid #dfe3e8;
-	border-radius: 0;
+  border-radius: 0;
+  z-index: 999;
 }
 
 .nav-link img {
@@ -37,6 +38,12 @@
   padding: 8px 20px;
 	background: transparent;
 	line-height: normal;
+}
+
+.navbar a.nav-link:hover {
+  color: var(--secondary-bg-color) !important;
+  transform: scale(1.2);
+  transition: all 0.5s ease;
 }
 
 .navbar .sign-up-btn {
