--- a/src/css/base/typography.css
+++ b/src/css/base/typography.css
@@ -2,3 +2,14 @@ body {
   font-family: 'TTNormsMedium';
 }
 
+.title {
+  color: var(--headline-color);
+  font-size: 28px;
+  font-weight: 500;
+}
+
+.paragraph {
+  font-size: 16px;
+  font-weight: normal;
+}
+
