--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -215,3 +215,83 @@ body {
 .offer-title, .offer-container .paragraph {
   color: var(--headline-color);
 }
+
+/* testimonials section */
+
+@media screen and (max-width: 495px) {
+  .testimonial-carousel .title-custom {
+    text-align: left !important;
+  }
+}
+
+.carousel-inner {
+  padding: 50px;
+  padding-left: 90px;
+  padding-right: 90px;
+  height: auto;
+}
+
+.client-name-carousel {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--headline-color);
+}
+
+@media screen and (max-width: 478px) {
+  .carousel-control-next {
+    right: -15px;
+  }
+
+  .carousel-control-prev {
+    left: -15px;
+  }
+
+  .carousel-inner {
+    padding: 20px;
+  }
+
+  .carousel-indicators {
+    bottom: -30px;
+  }
+}
+
+.carousel-content {
+  color: var(--headline-color);
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 1200px) {
+  .carousel-inner {
+    padding: 3rem;
+    padding-left: 140px;
+    padding-right: 140px;
+  }
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%234A986C' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%234A986C' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+
+.carousel-indicators > li {
+  border-radius: 100%;
+  width: 20px;
+  height: 20px;
+}
+
+.carousel-indicators li {
+  background-color: var(--secondary-bg-color);
+  cursor: pointer;
+}
+
+.carousel-item.active {
+  display: block;
+}
+
+.carousel-item .paragraph {
+  color: var(--headline-color);
+}
