--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -11,6 +11,7 @@
   font-weight: bold;
   cursor: pointer;
   z-index: 2;
+  border: 3px solid transparent;
   transition: all 0.2s ease;
   -webkit-appearance: none;
 }
