--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -82,7 +82,7 @@ header {
   font-size: 14px;
 }
 .navbar .action-form a {
-  color: #33cabb;
+  color: #33cabb !important;
   padding: 0 !important;
   font-size: 14px;
 }
