--- a/src/css/pages/rent.css
+++ b/src/css/pages/rent.css
@@ -5,3 +5,12 @@
 .rent-page label {
   color: var(--headline-color);
 }
+
+.rent-page .car-card {
+  background-color: white;
+  border-radius: 25px;
+}
+
+.rent-page .car-image {
+  max-width: 100%;
+}
