--- a/src/css/pages/rent.css
+++ b/src/css/pages/rent.css
@@ -14,3 +14,13 @@
 .rent-page .car-image {
   max-width: 100%;
 }
+
+.popup-label {
+  color: black !important;
+}
+
+.popup-btn {
+  font-size: 16px !important;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+}
