--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -58,6 +58,10 @@ body {
 
 .img-container {
   max-width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-img {
@@ -144,7 +148,7 @@ body {
   left: 170px;
 }
 
-.card-container:last-child .card-image{
+.card-container:last-child .card-image {
   top: -90px !important;
 }
 
@@ -325,6 +329,7 @@ body {
   color: var(--headline-color);
 }
 
-#rentDate, #returnDate {
+#rentDate,
+#returnDate {
   width: 100%;
 }
