Restructure project files

--- a/src/css/pages/rent.css
+++ b/src/css/pages/rent.css
@@ -12,6 +12,14 @@
   height: 100%;
 }
 
+.rent-page .img-container {
+  max-width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .rent-page .car-image {
   display: block;
 }
